* fix z-index issue for side-menu

--- a/client/src/menu/side-menu.scss
+++ b/client/src/menu/side-menu.scss
@@ -25,7 +25,7 @@ $menu-width: 250px;
         text-align: center;
         width: $toggle-size;
         height: $toggle-size;
-        z-index: 99;
+        z-index: 100;
 
         &::before {
             content: '';
@@ -39,6 +39,7 @@ $menu-width: 250px;
 
     .menu-content {
         min-height: 200px;
+        z-index: 99;
 
         & > a, & > div {
             display: block;
@@ -74,6 +75,7 @@ $menu-width: 250px;
     &.Expanded {
         .overlay {
             display: block;
+            z-index: 98;
         }
 
         .expand-toggle {
